--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
   <body>
     <!-- Start Header -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark p-3">
       <div class="container">
         <a class="navbar-brand logo" href="#" style="color: #ecc107;">thapatechnical</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button style="outline: none;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -66,7 +66,7 @@
       <!-- End Landing Section -->
       <!-- Start Services -->
       <div class="services text-center">
-        <div id="serv" style="height: 200px;"></div>
+        <div id="serv" style="height: 300px;"></div>
         <h2>Serivces</h2>
         <p>this is the best serivces in the world</p>
         <div class="row">
@@ -242,7 +242,7 @@
 <!-- End Contact -->
     </div>
             <!-- Start Footer -->
-            <div class="footer fixed">&copy; 2021 <span>Leen</span> All Right Reserved</div>
+            <div class="footer fixed">&copy; 2021 <span>Hassnaa Mahmoud</span> All Right Reserved</div>
             <!-- End Footer -->
     <!-- Bootstrap JS -->
     <script src="assets/js/popper.min.js"></script>
